k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workorder-api
  namespace: workorder-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workorder-api
  template:
    metadata:
      labels:
        app: workorder-api
    spec:
      serviceAccountName: workorder-api-sa
      containers:
        - name: workorder-api
          image: ivancl4udio/workorder-quarkus-pg-rest-api:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: workorder-api-svc
  namespace: workorder-api
spec:
  selector:
    app: workorder-api
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
